Fix index.css font BMJua format

--- a/src/index.css
+++ b/src/index.css
@@ -25,5 +25,5 @@
 
 @font-face {
 	font-family: 'BMJua';
-	src: url('./fonts/BMJUA.otf') format('truetype');
+	src: url('./fonts/BMJUA.otf') format('opentype');
 }
